@@ -8,7 +8,6 @@
 	<name>cukesatdd</name>
 	<build>
 		<sourceDirectory>${project.basedir}/src/main</sourceDirectory>
-		<testSourceDirectory>${project.basedir}/src/main</testSourceDirectory>
 		<resources>
 			<resource>
 				<directory>${project.basedir}/src/main/resources</directory>
@@ -42,35 +41,6 @@
 				<configuration>
 					<scanIntervalSeconds>5</scanIntervalSeconds>
 				</configuration>
-			</plugin>
-			
-			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.14</version>
-				<configuration>
-					<argLine>-Xmx512m -XX:MaxPermSize=512m</argLine>
-				</configuration>
-				<executions>
-
-					<execution>
-						<id>default-test</id>
-						<phase>integration-test</phase>
-						<goals>
-							<goal>test</goal>
-						</goals>
-						<configuration>
-							<daemon>true</daemon>
-
-							<includes>
-								<include>**/RunMRAtddTestLogin.class</include>
-							</includes>
-							<testFailureIgnore>false</testFailureIgnore>
-
-						</configuration>
-					</execution>
-
-
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
